--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "lodash.throttle": "^4.1.1",
     "prop-types": "15.5.10",
     "react": "^15.6.1",
-    "react-dom": "15.5.3",
-    "styled-components": "2.1.2"
+    "react-dom": "15.5.3"
   },
   "scripts": {},
   "devDependencies": {
