--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "react-lay-z-image",
   "description": "fade in image on load, show custom error image on error, dont load image until within view",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "license": "MIT",
+  "main": "./src/index.js",
   "dependencies": {
     "lodash.throttle": "^4.1.1"
   },
