--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "react-lay-z-image",
   "description": "fade in image on load, show custom error image on error, dont load image until within view",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "license": "MIT",
-  "main": "./src/index.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "browser": "dist/index.umd.js",
   "dependencies": {
     "lodash.throttle": "^4.1.1"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "rollup -c"
   },
   "peerDependencies": {
     "prop-types": ">=15",
@@ -24,6 +27,8 @@
     "prop-types": "15.5.10",
     "react": "^15.6.1",
     "react-dom": "15.5.3",
-    "react-test-renderer": "^15.6.1"
+    "react-test-renderer": "^15.6.1",
+    "rollup": "^0.50.0",
+    "rollup-plugin-babel": "^3.0.2"
   }
 }
